@@ -56,9 +56,6 @@ import sys
 import os
 import db
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 # file name NEW_MAP_FILE
 newMapFile = None
 
